--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Lanchi Xie"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "A researcher in forensic science"
   location         : "Earth"
-  employer         : "Red Brick University"
+  employer         : "Institure of Forensic Science, Ministry of Public Security, China"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "xielanchi@cifs.gov.cn" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
